--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,10 +73,11 @@ dependencies {
     def arch_version = "2.1.0"
     testImplementation "androidx.arch.core:core-testing:$arch_version"
 
-    def room_version = "2.2.5"
+    def room_version = "2.3.0-alpha02"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-rxjava3:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
